--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -6,7 +6,7 @@ on:
 env:
   AZURE_FUNCTIONAPP_NAME: fh-clc3-example    # set this to your function app name on Azure
   POM_XML_DIRECTORY: '.'                     # set this to the directory which contains pom.xml file
-  POM_FUNCTIONAPP_NAME: fh-clc3-example      # set this to the function app name in your local development environment
+  POM_FUNCTIONAPP_NAME: clc3-azure-example-asp      # set this to the function app name in your local development environment
   JAVA_VERSION: '11'                      # set this to the java version to use
 
 jobs:
@@ -24,7 +24,7 @@ jobs:
     - name: 'Restore Project Dependencies Using Mvn'
       shell: bash
       run: |
-        pushd './${{ env.POM_XML_DIRECTORY }}'
+        pushd './'
         mvn clean package
         mvn azure-functions:package
         popd
@@ -32,5 +32,5 @@ jobs:
       uses: Azure/functions-action@v1
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        package: './${{ env.POM_XML_DIRECTORY }}/target/azure-functions/${{ env.POM_FUNCTIONAPP_NAME }}'
+        package: '${{ env.POM_XML_DIRECTORY }}/target/azure-functions/${{ env.POM_FUNCTIONAPP_NAME }}'
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
