--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -4,9 +4,6 @@ on:
   [push]
 
 env:
-  AZURE_FUNCTIONAPP_NAME: fh-clc3-example    # set this to your function app name on Azure
-  POM_XML_DIRECTORY: '.'                     # set this to the directory which contains pom.xml file
-  POM_FUNCTIONAPP_NAME: clc3-azure-example-asp      # set this to the function app name in your local development environment
   JAVA_VERSION: '11'                      # set this to the java version to use
 
 jobs:
@@ -26,11 +23,5 @@ jobs:
       run: |
         pushd './'
         mvn clean package
-        mvn azure-functions:package
-        popd
-    - name: 'Run Azure Functions Action'
-      uses: Azure/functions-action@v1
-      with:
-        app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
-        package: '${{ env.POM_XML_DIRECTORY }}/target/azure-functions/${{ secrets.POM_FUNCTIONAPP_NAME }}'
-        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+        mvn azure-functions:deploy
+        
