--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,15 @@
             <groupId>com.azure</groupId>
             <artifactId>azure-identity</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.microsoft.azure.cognitiveservices</groupId>
+            <artifactId>azure-cognitiveservices-computervision</artifactId>
+            <version>1.0.9-beta</version>
+        </dependency>
     </dependencies>
+
+    
 
     <build>
         <plugins>
