--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,18 @@
             <artifactId>azure-cognitiveservices-computervision</artifactId>
             <version>1.0.9-beta</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-cognitiveservices-customvision-training</artifactId>
+            <version>1.1.0-preview.2</version>
+        </dependency>        
+
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-cognitiveservices-customvision-prediction</artifactId>
+            <version>1.1.0-preview.2</version>
+        </dependency>
     </dependencies>
 
     
